# libvirt-ocaml

./: .gitignore  Makefile  README  dune-project
examples/: dune
libvirt/: dune  libvirt.mli  libvirt_version.mli
libvirt/config/: discover.ml
